style – Fix homepage card and spacing issues.
+ add fix for white margin on edge
+ fix cta cards sizing and button color
+ fix home sweet home button color; *need framework tweak to buttons on orange*
+ fix create your own path sizing error at super wide
+ add space on narrow screens above cards for video and alumni strip

--- a/src/scss/_extended.scss
+++ b/src/scss/_extended.scss
@@ -9,17 +9,26 @@
 
 /* Class to pull in max width of group */
 .inset-container > div[class$="__inner-container"] {
-  width: 85vw;
+  // width: 85vw;
   margin: 0 auto;
 }
 .container-fluid {
-  // fixes random white space on left at smaller sizes
-  // might look at updating the mixin container in framework. Need to experiment more.
+  // fixes random white margins caused by gutters on the left side at narrow widths
   padding-left: calc(var(--bs-gutter-x, 0.75rem) / 2);
+  @media (min-width: 1600px) {
+    //recalculated at wider screens to fix spacing that was appearing on right
+    // might look at updating the mixin container in framework. Need to experiment more.
+    padding-left: calc(var(--bs-gutter-x, 0.75rem));
+  }
 }
 
 // ––––––––––––
 
+.campus-gallery {
+  position: relative;
+
+  width: 100vw;
+}
 .campus-gallery > div {
   background-image: url("https://images.utk.edu/designsystem/www2021/v1/i/knoxville_illustration_3.svg");
   background-repeat: no-repeat;
@@ -40,6 +49,9 @@
   // background-color: white !important;
 }
 
+.cta-card-flex > div[class$="__inner-container"] {
+  display: flex;
+}
 .home-card {
   //used on dark grey cards on home
   transition: all 0.2s ease;
@@ -60,7 +72,14 @@
     transition: all 0.4s ease-out;
   }
 }
-
+.strip-orange .btn-link {
+  // This is overriding an issue in the framework.
+  // all items under .strip-orange are changing colors even when nested in a different color object.
+  box-shadow: inset 0px -1px $utorange;
+  &:after {
+    content: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='30' height='22' fill='%23ff8200' viewBox='0 0 25 26' %3E%3Cpath d='M5 3l3.057-3 11.943 12-11.943 12-3.057-3 9-9z' /%3E%3C/svg%3E");
+  }
+}
 .gallery-home {
   .content-card {
     //cards in the corner of HOME SWEET HOME
@@ -348,7 +367,6 @@ Buttons with Chevrons – pulled from ExpressionEngine
   padding-left: 0;
   z-index: 4;
   margin-bottom: 2rem;
-  width: auto;
   &::before {
     position: absolute;
     content: " ";
